docs(logo doc and download): logo doc and download
affects: @fremtind/portal

ISSUES CLOSED: #1027

--- a/portal/src/texts/profile/logo.mdx
+++ b/portal/src/texts/profile/logo.mdx
@@ -5,15 +5,21 @@ order: 4
 ---
 
 import { DoDontExample } from "../../components/DoDontExample";
+import { DownloadAsset } from "../../components/DownloadAsset";
 import { Grid } from "../../components/Grid";
-import LogoDefault from "../../../public/assets/documentation/logo/logo-default.svg";
-import LogoSymbol from "../../../public/assets/documentation/logo/logo-symbol.svg";
-import LogoDescribed from "../../../public/assets/documentation/logo/logo-described.svg";
-import LogoWrong from "../../../public/assets/documentation/logo/logo-wrong-use.svg";
-import LogoCorrect from "../../../public/assets/documentation/logo/logo-correct-use.svg";
-import LogoCorrectColor from "../../../public/assets/documentation/logo/logo-correct-color.svg";
-import LogoWrongColor from "../../../public/assets/documentation/logo/logo-wrong-color.svg";
-import LogoWrongShadow from "../../../public/assets/documentation/logo/logo-wrong-shadow.svg";
+import LogoDefault from "../../../static/assets/documentation/logo/logo-default.svg";
+import LogoSymbol from "../../../static/assets/documentation/logo/logo-symbol.svg";
+import LogoDescribed from "../../../static/assets/documentation/logo/logo-described.svg";
+import LogoWrong from "../../../static/assets/documentation/logo/logo-wrong-use.svg";
+import LogoCorrect from "../../../static/assets/documentation/logo/logo-correct-use.svg";
+import LogoCorrectColor from "../../../static/assets/documentation/logo/logo-correct-color.svg";
+import LogoWrongColor from "../../../static/assets/documentation/logo/logo-wrong-color.svg";
+import LogoWrongShadow from "../../../static/assets/documentation/logo/logo-wrong-shadow.svg";
+
+import FremtindLogoFremtindLogoNegative from "../../../static/assets/downloads/Fremtind_Logo_Fremtind_Logo_Negative.svg";
+import FremtindLogoFremtindLogoPositive from "../../../static/assets/downloads/Fremtind_Logo_Fremtind_Logo_Positive.svg";
+import FremtindLogoFremtindLogoSymbolNegative from "../../../static/assets/downloads/Fremtind_Logo_Fremtind_Logo_Symbol_Negative.svg";
+import FremtindLogoFremtindLogoSymbolPositive from "../../../static/assets/downloads/Fremtind_Logo_Fremtind_Logo_Symbol_Positive.svg";
 
 # Logo
 Logoen er navnetrekket vårt. Vi skal i utgangspunktet bruke logoen alene, slik at den får fokus.
@@ -64,5 +70,12 @@ Vi skal aldri legge skygge eller relieffeffekter på eller under logoen.
 Eksempel på logosymbolet i toppteksten og og logoen i bunnteksten (nettside og skjema) Eksempel når de står i en modul, på et kort eller midt på siden
 
 
-
-
+## Her finner du logooriginalene
+<br/>
+<DownloadAsset type="svg" name="Fremtind_Logo_Fremtind_Logo_Negative.svg" asset={FremtindLogoFremtindLogoNegative} darkbg />
+<DownloadAsset type="svg" name="Fremtind_Logo_Fremtind_Logo_Positive.svg" asset={FremtindLogoFremtindLogoPositive} />
+<br/>
+<br/>
+<br/>
+<DownloadAsset type="svg" name="Fremtind_Logo_Fremtind_Logo_Symbol_Negative.svg" asset={FremtindLogoFremtindLogoSymbolNegative} darkbg />
+<DownloadAsset type="svg" name="Fremtind_Logo_Fremtind_Logo_Symbol_Positive.svg" asset={FremtindLogoFremtindLogoSymbolPositive} />
