docs(logo doc improved): logo doc improved
affects: @fremtind/portal

ISSUES CLOSED: #1027

--- a/portal/src/texts/profile/logo.mdx
+++ b/portal/src/texts/profile/logo.mdx
@@ -27,8 +27,8 @@ Logoen er navnetrekket vårt. Vi skal i utgangspunktet bruke logoen alene, slik 
 I tillegg til logoen har vi et logosymbol, som er utledet fra «F-en» i logoen. F-en tipper mot høyre og former en tinde. Logosymbolet passer god til små flater, for å skape et tydeligere visuelt uttrykk. Det gir oss også større fleksibilitet i logobruk.
 
 <Grid>
-    <DoDontExample content={<img src={LogoDefault}/>} type="do" description="Logo"/>
-    <DoDontExample content={<img src={LogoSymbol}/>} type="do" description="Logosymbol"/>
+    <DoDontExample content={<img className="jkl-portal-do-dont-example__image" src={LogoDefault}/>} type="do" description="Logo"/>
+    <DoDontExample content={<img className="jkl-portal-do-dont-example__image" src={LogoSymbol}/>} type="do" description="Logosymbol"/>
 </Grid>
 
 ## Slik bruker du logoen
@@ -36,7 +36,7 @@ I tillegg til logoen har vi et logosymbol, som er utledet fra «F-en» i logoen.
 ### Avstand rundt
 Avstanden rundt logoen og logosymbolet bør være minst halvparten av Fremtind-F-ens høyde. Under logoene bør avstanden være minst 3/4 (0,75 %) av F-ens høyde. Ikke sett logo eller logosymbol i en ramme, de skal stå mest mulig fritt på flaten.
 
-<DoDontExample fullWidth content={<img src={LogoDescribed}/>} type="do" description="Logo og logosymbol skal enten være sorte eller hvite med god kontrast til bakgrunnen."/>
+<DoDontExample fullWidth content={<img className="jkl-portal-do-dont-example__image" src={LogoDescribed}/>} type="do" description="Logo og logosymbol skal enten være sorte eller hvite med god kontrast til bakgrunnen."/>
 
 
 ### Avstand mellom logo og logosymbol
@@ -44,16 +44,16 @@ Avstanden rundt logoen og Logoen og logosymbolet skal aldri stå så nær hveran
 Logosymbolet skal alltid stå i toppen og logoen i bunnen, dersom de brukes på samme flate.logosymbolet bør være minst halvparten av Fremtind-F-ens høyde. Under logoene bør avstanden være minst 3/4 (75 %) av F-ens høyde. Ikke sett logo eller logosymbol i en ramme, de skal stå mest mulig fritt på flaten.
 
 <Grid>
-    <DoDontExample content={<img src={LogoCorrect}/>} type="do" description="Logosymbolet skal stå i toppen og logoen i bunnen, hvis de brukes på samme flate"/>
-    <DoDontExample content={<img src={LogoWrong}/>} type="dont" description="Ikke sett logo og logosymbol sammen. Benytt en alene."/>
+    <DoDontExample content={<img className="jkl-portal-do-dont-example__image" src={LogoCorrect}/>} type="do" description="Logosymbolet skal stå i toppen og logoen i bunnen, hvis de brukes på samme flate"/>
+    <DoDontExample content={<img className="jkl-portal-do-dont-example__image" src={LogoWrong}/>} type="dont" description="Ikke sett logo og logosymbol sammen. Benytt en alene."/>
 </Grid>
 
 ### Farger
 Logo og logosymbol skal brukes i svart eller hvitt - ikke andre farger. Pass på at logoen alltid har god kontrast mot bakgrunnsfargen med tanke på kravene til universell utforming.
 
 <Grid>
-    <DoDontExample content={<img src={LogoCorrectColor}/>} type="do" description="Logo og logosymbol skal enten være sorte eller hvite med god kontrast til bakgrunnen."/>
-    <DoDontExample content={<img src={LogoWrongColor}/>} type="dont" description="Logo eller logosymbol i annen farge enn svart eller hvit"/>
+    <DoDontExample content={<img className="jkl-portal-do-dont-example__image" src={LogoCorrectColor}/>} type="do" description="Logo og logosymbol skal enten være sorte eller hvite med god kontrast til bakgrunnen."/>
+    <DoDontExample content={<img className="jkl-portal-do-dont-example__image" src={LogoWrongColor}/>} type="dont" description="Logo eller logosymbol i annen farge enn svart eller hvit"/>
 </Grid>
 
 ### Proporsjoner
@@ -63,7 +63,7 @@ Logoen skal alltid beholde sine opprinnelige proporsjoner - ikke strekk den. Tip
 Vi skal aldri legge skygge eller relieffeffekter på eller under logoen.
 
 <Grid>
-    <DoDontExample fullWidth={false} content={<img src={LogoWrongShadow}/>} type="dont" description="Ikke bruk skygge eller relieffeffekter på logo og logosymbol" type="small"/>
+    <DoDontExample fullWidth={false} content={<img className="jkl-portal-do-dont-example__image" src={LogoWrongShadow}/>} type="dont" description="Ikke bruk skygge eller relieffeffekter på logo og logosymbol" type="small"/>
 </Grid>
 
 ### Plassering i skjema, på nettsider og på kort
