fix(portal): fix small accessibility issues
affects: @fremtind/portal

--- a/portal/src/texts/profile/picture.mdx
+++ b/portal/src/texts/profile/picture.mdx
@@ -14,7 +14,7 @@ import VideoBox from "../../components/Documentation/Picture/VideoBox";
     bruke bilder i våre løsninger eller i en presentasjon.
 </HeroImage>
 
-### Dette bør du tenke gjennom når du velger et bilde:
+## Dette bør du tenke gjennom når du velger et bilde:
 
 Passer bildet med Fremtinds visjon? Hjelper bildet brukeren å forstå det du kommuniserer? Viser bildet produktet
 eller tjenesten på en god måte? Tilfører bildet verdi til innholdet? Hva slags virkning har bildet på
@@ -22,7 +22,7 @@ mottakeren?
 
 <div style={{ paddingBottom: "15vh" }} />
 
-# Fotostil
+## Fotostil
 
 Fremtind har en todelt fotostil. Vi står enten på toppen av tinden, med full oversikt, eller på bakkeplan sammen med menneskene. Fotostilen er ærlig, ekte og upolert. Den er hverdagslig og jordnær, nettopp for å gi brukerne våre noe de kan kjenne seg igjen i. Fordi fargene vi bruker er nøkterne og stilrene, vil fotografier utdype identiteten med varme og følelser. Bruk gjerne bilder som henter farger fra Fremtinds støttefargepallett.
 
@@ -56,7 +56,7 @@ I all hovedsak:
 
 <div style={{ paddingBottom: "15vh" }} />
 
-# Hvordan velge bilde?
+## Hvordan velge bilde?
 
 Når vi snakker om et konkret forsikringsprodukt, kan det være vanskelig å finne bilder som passer perfekt. Her er noen tips og retningslinjer for de ulike forsikringene. Felles for kategoribildene er at vi ønsker å fokusere på en situasjon som oppstår rundt eller i samspill med produktet, i stedet for selve produktet.
 
