docs(improved logo doc): log doc
affects: @fremtind/portal

ISSUES CLOSED: #1050

--- a/portal/src/texts/profile/logo.mdx
+++ b/portal/src/texts/profile/logo.mdx
@@ -71,6 +71,7 @@ Eksempel på logosymbolet i toppteksten og og logoen i bunnteksten (nettside og 
 
 
 ## Her finner du logooriginalene
+Logoen kan kun benyttes på produkter som representerer Fremtind. Tredjeparter må også ha godkjenning før bruk av logoen på produkter som skal lages for oss.
 <br/>
 <DownloadAsset type="svg" name="Fremtind_Logo_Fremtind_Logo_Negative.svg" asset={FremtindLogoFremtindLogoNegative} darkbg />
 <DownloadAsset type="svg" name="Fremtind_Logo_Fremtind_Logo_Positive.svg" asset={FremtindLogoFremtindLogoPositive} />
